--- a/Filters/Filter_Lib/Filter_Lib.vcproj
+++ b/Filters/Filter_Lib/Filter_Lib.vcproj
@@ -129,15 +129,15 @@
 					Name="Debug|Win32">
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="nasmw -f win32 -o &quot;$(IntDir)&quot;\&quot;$(InputName)&quot;.obj -p &quot;..\..\Common\DScaler.mac&quot; &quot;$(InputPath)&quot;
-"
+						CommandLine="nasmw -f win32 -o &quot;$(IntDir)\$(InputName)&quot;.obj -p &quot;..\..\Common\DScaler.mac&quot; &quot;$(InputPath)&quot;"
 						Outputs="$(IntDir)\$(InputName).obj"/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32">
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="nasmw -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)"
+						CommandLine="nasmw -f win32 -o $(IntDir)\$(InputName).obj -p &quot;..\..\Common\DScaler.mac&quot; $(InputPath)
+"
 						Outputs="$(IntDir)\$(InputName).obj"/>
 				</FileConfiguration>
 			</File>
